syntax = "proto3";

package chat;

option go_package = "github.com/react/mobile-chat-video/api/chat";

service ChatService {
  rpc SendMessage(Message) returns (MessageResponse);
  rpc StreamMessages(StreamRequest) returns (stream Message);
  rpc GetChatHistory(ChatHistoryRequest) returns (ChatHistoryResponse);
}

message Message {
  string id = 1;
  string sender_id = 2;
  string receiver_id = 3;
  string content = 4;
  int64 timestamp = 5;
  bool is_read = 6;
}

message MessageResponse {
  bool success = 1;
  string message_id = 2;
  string error = 3;
}

message StreamRequest {
  string user_id = 1;
}

message ChatHistoryRequest {
  string user_id = 1;
  string peer_id = 2;
  int32 limit = 3;
  int64 offset = 4;
}

message ChatHistoryResponse {
  repeated Message messages = 1;
  int32 total = 2;
}
